# tvpi

./: AUTHORS  BugLog  ChangeLog  Makefile.am  NEWS  README  config.h.in  configure.ac  mkinstalldirs
interface/C/: tvpi_c.h
interface/Haskell/: TestTvpi.hs  Tvpi.hsc
src/: affine.cpp  affine.hh  common.hh  interval.cpp  interval.hh  landmark.cpp  landmark.hh  lincomponent.hh  memory.cpp  memory.hh  planar.cpp  planar.hh  polyhedron.cpp  polyhedron.hh  tvpi.cpp  tvpi.hh  tvpi_c.cpp  tvpiexception.hh
tests/: testConvergents1.cpp  testConvergents2.cpp  testDenseTvpi1.cpp  testDenseTvpiApproximateInequalities1.cpp  testDenseTvpiApproximateInequalities2.cpp  testDenseTvpiApproximateInequalities3.cpp  testDenseTvpiAugment1.cpp  testDenseTvpiAugment2.cpp  testDenseTvpiRenameVariables1.cpp  testDenseTvpiResultants1.cpp  testDenseTvpiResultants2.cpp  testDenseTvpiResultants3.cpp  testDomainEntails1.cpp  testDomainInequality1.cpp  testDomainInequality2.cpp  testDomainInequality3.cpp  testDomainJoin1.cpp  testDomainJoin2.cpp  testDomainRemoveVariable1.cpp  testDomainRemoveVariable2.cpp  testDomainUpdate1.cpp  testInequalityCalcDirection1.cpp  testInequalityCalculateCut1.cpp  testInequalityCalculateCut2.cpp  testInequalityCalculateCut3.cpp  testInequalityCalculateCut4.cpp  testInequalityCalculateCut5.cpp  testInequalityCalculateCut6.cpp  testInequalityCalculateCut7.cpp  testInequalityCalculateCut8.cpp  testInequalityIsEntailed1.cpp  testInequalityIsEntailed2.cpp  testInequalityIsEntailed3.cpp  testInequalityIsEntailed4.cpp  testInequalityLessThanPi1.cpp  testInterval1.cpp  testInterval2.cpp  testInterval3.cpp  testInterval4.cpp  testInterval5.cpp  (+34 more)
